# scrapy_course

./: installation_scrapy.txt  pyproject.toml
follow_book_links/: scrapy.cfg
follow_book_links/follow_book_links/: extractors.json  items.py  settings.py
follow_book_links/follow_book_links/spiders/: books.py
quotes_login_spider/quotes_login_spider/: settings.py
quotes_spider/quotes_spider/spiders/: quotes.py
seccion_15/data_extraction/books_crawler/: .~lock.items.csv#  items.csv
seccion_15/data_extraction/books_crawler/books_crawler/: items.csv
seccion_15/grabbing_urls/books_crawler/books_crawler/spiders/: books.py
seccion_17/40_export_file/books_crawler/: items.json
seccion_17/40_export_file/books_crawler/books_crawler/: items.json
seccion_17/41_export_excel/quotes_spider/: items.csv  items.xlsx
seccion_17/42_download_images/books_crawler/books_crawler/: settings.py
seccion_17/43_rename_image/books_crawler/books_crawler/: pipelines.py  settings.py
seccion_18/45_craiglist/craiglist/craiglist/spiders/: jobs.py
seccion_18/46_scrapy_spider/craiglist/: items.csv
seccion_18/46_scrapy_spider/craiglist/craiglist/: settings.py
seccion_18/46_scrapy_spider/craiglist/craiglist/spiders/: jobs.py
seccion_18/47_one_page/craiglist/craiglist/spiders/: jobs.py
seccion_18/49_job_descrip/craiglist/: items.csv
seccion_19/54_writing_mysql/books_crawler/: items.csv  items.json
seccion_19/54_writing_mysql/books_crawler/books_crawler/spiders/: books.py
seccion_19/mongodb/: mongodb.yaml
seccion_19/mysql/: mysql.yml  notas.sql  prueba_conexion.py
